--- a/index.css
+++ b/index.css
@@ -1,22 +1,34 @@
 /* 带有评论系统的页面使用 */
-        :root {
-            --waline-theme-color: #0d6efd !important;
-            --waline-active-color: #0d6efd !important;
-        }
+:root {
+    --waline-theme-color: #0d6efd !important;
+    --waline-active-color: #0d6efd !important;
+}
 
-        .searchResults li {
-            list-style-type: none;
-        }
+:root {
+    --waline-border: none;
+    --waline-box-shadow: 0 12px 40px rgb(134 151 168 / 25%);
+}
 
-        .searchResults {
-            position: absolute;                                  
-            background-color: white;
-            border: 1px solid #ccc;           
-            display: none;
-        }
+@media (prefers-color-scheme: dark) {
+    body {
+        --waline-box-shadow: 0 12px 40px #0f0e0d;
+    }
+}
 
-        .navbar {
-            backdrop-filter: blur(10px); 
-            position: sticky;          
-            z-index: 1111;
-        }
+
+.searchResults li {
+    list-style-type: none;
+}
+
+.searchResults {
+    position: absolute;
+    background-color: white;
+    border: 1px solid #ccc;
+    display: none;
+}
+
+.navbar {
+    backdrop-filter: blur(10px);
+    position: sticky;
+    z-index: 1111;
+}
