--- a/index.css
+++ b/index.css
@@ -1,20 +1,3 @@
-:root {
-    --waline-theme-color: #0d6efd !important;
-    --waline-active-color: #0d6efd !important;
-}
-
-:root {
-    --waline-border: none;
-    --waline-box-shadow: 0 12px 40px rgb(134 151 168 / 25%);
-}
-
-@media (prefers-color-scheme: dark) {
-    body {
-        --waline-box-shadow: 0 12px 40px #0f0e0d;
-    }
-}
-
-
 .searchResults li {
     list-style-type: none;
 }
@@ -27,7 +10,7 @@
 }
 
 .navbar {
-    backdrop-filter: blur(10px);
+    background-color: white;
     position: sticky;
     z-index: 1111;
 }
